Fixed nav overflow

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -1,3 +1,4 @@
+
 @import 'variables';
 
 #mainNav{
@@ -20,6 +21,7 @@
 
   #navLogo{
     position:relative;
+    width:50%;
     left:30px;
     top:5px;
     font-size: 30px;
